tester/testsuite/extensions/arrays1/bad/parantheses.jl


int main() {

    int[] arr = new int[15];

    int x = arr.(length + 10);
    int y = arr.(length * 3);
    int z = arr.(5 + length);

    return 0;
}